replace RunTestsFromJar.java by sbt task